@@ -1,3 +1,9 @@
+2001-01-30  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/generic/bits/sockaddr.h: Remove SA_LEN macro.
+	* sysdeps/unix/bsd/bsd4.4/bits/sockaddr.h: Likewise.
+	* include/sys/socket.h: Add SA_LEN here for internal use.
+
 2001-01-29  Ulrich Drepper  <drepper@redhat.com>
 
 	* malloc/Makefile: Don't build memusagestat if cross-compiling.
